# adsbtrack

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
adsbtrack/: acars.py  airframes.py  airports.py  bench.py  classifier.py  cli.py  config.py  db.py  events.py  features.py  fetcher.py  gaps.py  geo.py  gui_export.py  helipads.py  hex_crossref.py  ils_alignment.py  landing_anchor.py  mcp.py  mil_hex.py  models.py  navaid_alignment.py  navaids.py  nnumber.py  parser.py  registry.py  runways.py  solar.py  takeoff_runway.py
adsbtrack/tui/: __init__.py  app.py  braille.py  queries.py  widgets.py
adsbtrack/tui/screens/: __init__.py  aircraft.py  events.py  flights.py  map.py  ops.py  spoof.py  status.py
adsbtrack/tui/styles/: app.tcss
adsbtrack/tui/views/: __init__.py  aircraft.py  events.py  flights.py  jump.py  map.py  ops.py  spoof.py  status.py
design/: README.md  colors_and_type.css
design/preview/: _card.css  brand-icons.html  brand-logo.html  brand-voice.html  colors-accents.html  colors-light.html  colors-neutrals.html  colors-sources.html  components-buttons.html  components-inputs.html  components-kbd.html  components-pills.html  components-statusbar.html  components-table.html  spacing-elevation.html  spacing-radii.html  spacing-scale.html  type-mono.html  type-numeric.html  type-prose.html  type-scale.html
docs/: datasette-metadata.json  datasette.md  features.md  internals.md  pr-async-fetcher.md  schema.md
docs/superpowers/plans/: 2026-04-16-go-around-pattern.md  2026-04-16-ils-alignment.md  2026-04-16-landing-alt-min-anchor.md  2026-04-16-runway-geometry.md  2026-04-16-squawk-signals.md  2026-04-16-takeoff-runway.md  2026-04-17-navaid-alignment.md
tests/: conftest.py  test_acars.py  test_analytical_snapshots.py  test_classifier.py  test_cli.py  test_db.py  test_events.py  test_features.py  test_fetcher.py  test_fetcher_async.py  test_gaps.py  test_gui_export.py  test_helipads.py  test_hex_crossref.py  test_ils_alignment.py  test_landing_anchor.py  test_mcp.py  test_navaid_alignment.py  test_navaids.py  test_nnumber.py  test_parser.py  test_registry.py  test_runways.py  test_solar.py  test_takeoff_runway.py  test_tui_app.py  test_tui_queries.py
tests/fixtures/: navaids_sample.csv  runways_sample.csv
