[project]
name = "adsbtrack"
version = "0.1.0"
description = "Track private plane travel history using ADS-B Exchange historical data"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
adsbtrack = "adsbtrack.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
