[project]
name = "adsbtrack"
version = "0.1.0"
description = "Pull historical ADS-B trace data and turn it into structured flight history for any aircraft"
requires-python = ">=3.12"
authors = [{name = "Adam Franke"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["aviation", "osint", "adsb", "tracking", "aircraft", "flight-history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "httpx[http2]>=0.28",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/frankea/adsbtrack"
Repository = "https://github.com/frankea/adsbtrack"
Documentation = "https://github.com/frankea/adsbtrack#documentation"
Issues = "https://github.com/frankea/adsbtrack/issues"

[project.scripts]
adsbtrack = "adsbtrack.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# curl_cffi provides a Chrome TLS fingerprint so `registry update` can
# bypass Akamai Bot Manager on registry.faa.gov. Without it, the download
# usually 503s and users must fetch the zip manually through a browser.
faa = [
    "curl_cffi>=0.7",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
